# ADW

./: .env.example  .gitignore  CLAUDE.md  README.md  agents.md  changes.md  dev.py  enabled_widgets.toml  error.txt  example.py  main.py  migrate_settings.py  pyproject.toml  run.lnk  run.vbs  settings.json
.claude/: settings.local.json
default_themes/: ayu_dark.json  ayu_light.json  ayu_mirage.json  catppuccin_frappe.json  catppuccin_latte.json  catppuccin_macchiato.json  catppuccin_mocha.json  dracula.json  everforest_dark.json  everforest_light.json  gruvbox_dark.json  gruvbox_light.json  kanagawa.json  nord_transparent.json  one_dark.json  rose_pine.json  rose_pine_dawn.json  rose_pine_moon.json  solarized_dark.json  solarized_light.json  tokyo_night.json  tokyo_night_day.json  tokyo_night_storm.json
qml/: Battery.qml  GeneralSettings.qml  Hub.qml  Launcher.qml  Media.qml  NetworkMonitor.qml  News.qml  Notes.qml  Pomodoro.qml  SystemMonitor.qml  ThemeEditor.qml  Todo.qml  Weather.qml
qml/Common/: ColorPicker.qml  ScrollingText.qml  Theme.qml  ThemedButton.qml  ThemedIcon.qml  TitleBar.qml  WidgetWindow.qml  qmldir
widgets/: __init__.py  settings.py  theme_constants.py  theme_provider.py
widgets/battery/: __init__.py  battery.py
widgets/hotkey/: __init__.py  hotkey.py  listener.py
widgets/hub/: hub.py
widgets/launcher/: __init__.py  icon_extractor.py  launcher.py
widgets/media/: __init__.py  async_worker.py  create_default_cover.py  media.py
widgets/network_monitor/: __init__.py  network_monitor.py
widgets/news/: __init__.py  news.py
(+10 files in other folders)
