[project]
name = "widgets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pillow>=12.1.0",
    "pyside6>=6.10.1",
    "watchfiles>=1.1.1",
    "winrt-windows-foundation>=3.2.1",
    "winrt-windows-media-control>=3.2.1",
]
